# obj-viewer

./: .gitignore  CMakeLists.txt  README.md  release.bat  vcpkg.json
.github/workflows/: windows.yml
src/: viewer.cc
